# ksysguard-sensorface-networkspeed

./: .gitignore  CMakeLists.txt  README.md
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: CompactRepresentation.qml  Config.qml  FullRepresentation.qml  TotalNetworkSpeed.qml  config.mjs  util.mjs
